<resources>
    <string name="facebook_app_id">166280030715263</string>
    <string name="fb_login_protocol_scheme">fb166280030715263</string>

    <string name="app_name">FatSecret</string>
    <string name="start_now">Start now</string>
    <string name="icon_app">iconApp</string>
    <string name="app_name_lowercase">fatsecret</string>
    <string name="agree_term_policy">By continuing you are agree to the</string>
    <string name="term_and_condition">Terms and Conditions</string>
    <string name="and"> and </string>
    <string name="privacy_policy">Privacy pollicy</string>
    <string name="already_mem">Already a member?</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_mem">Email or Member Name</string>
    <string name="password">Password</string>
    <string name="send_pass">Send password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="other_option">Other options</string>
    <string name="your_goal">What is your goal?</string>
    <string name="weight_loss">Weight loss</string>
    <string name="weight_gain">Weight gain</string>
    <string name="maintain_weight">Maintain my current weight</string>
    <string name="can_change">you can always change this later</string>
    <string name="how_much_weight">How much weight would you like to gain?</string>
    <string name="activiies_level">What is your activity level?</string>
    <string name="sedentary">Sedentary</string>
    <string name="sedentary_detail">Daily activities require minimal effort such as resting, desk work or driving.</string>
    <string name="low_active">Low Active</string>
    <string name="low_active_detail">Daily activities require some effort such as periods of standing, housework or some lite exercise.</string>
    <string name="active">Active</string>
    <string name="active_detail">Daily activities require resonable effort such as standing, physical work or regular moderate exercise.</string>
    <string name="very_active">Very Active</string>
    <string name="very_active_detail">Daily activities require intense physical effort such as construction work or regular vigorous exercise.</string>
    <string name="current_weight">What is your current weight?</string>
    <string name="your_height">What is your height?</string>
    <string name="date_of_birth">What is your date of birth?</string>
    <string name="your_region">Choose your region</string>
    <string name="united_states">United States</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="region">Region</string>
    <string name="your_gender">What is your gender?</string>
    <string name="sign_up_email">Sign up with Email</string>
    <string name="email">Email</string>
    <string name="error">Error</string>
    <string name="fb_cancel">Cancel facebook login</string>
    <string name="fb_error">Facebook error</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="please_note">Please Note:</string>
    <string name="very_low_weight">Based on your height, your goal weight is very low and you should seek the advice of a medical doctor before beginning any diet.</string>
    <string name="very_high_weight">Based on your height, you goal weight is very high and you should seek the advice of a medical doctor before beginning any diet.</string>
    <string name="you_sure">Are you sure you wish to proceed?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="email_not_found">Email not found</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="diary">Diary</string>
    <string name="reports">Reports</string>
    <string name="weight">Weight</string>
    <string name="diet_calendar">Diet Calendar</string>
    <string name="photo_album">Photo Album</string>
    <string name="my_professionals">My Professionals</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="exercise_tracking">Exercise Tracking</string>
    <string name="exercise_diary">Exercise Diary</string>
    <string name="apps_devices"><![CDATA[Apps & Devices]]></string>
    <string name="data_sharing">Data Sharing</string>
    <string name="google_fit">Google Fit</string>
    <string name="google_fit_guide">Share your data with Google Fit</string>
    <string name="sure_to_logout">Are you sure you want to log out?</string>
</resources>
