<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/mg_layout"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/logo_nav_view"
            android:layout_height="@dimen/logo_nav_view"
            android:src="@drawable/widget_logo_default" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5"
            android:gravity="center"
            android:text="@string/app_name_lowercase"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_sign_in"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mg_title_app"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRegion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:padding="@dimen/dimen_5">

            <TextView
                android:id="@+id/tvRegion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/region"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_small" />

            <ImageView
                android:layout_width="@dimen/img_region_nav_view"
                android:layout_height="@dimen/img_region_nav_view"
                android:src="@drawable/region_icon_region_default" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
