<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingLeft="@dimen/mg_layout"
    android:paddingRight="@dimen/mg_layout"
    tools:context=".fragment.Welcome8Fragment">

    <TextView
        style="@style/QuestionActivityTitle"
        android:text="@string/your_region" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llThisCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn_welcome"
            android:layout_marginTop="@dimen/mg_title_app"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/height_btn_welcome"
                android:layout_height="@dimen/height_btn_welcome"
                android:src="@drawable/region_icon_region_default" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/united_states"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_btn_welcome"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOtherCountry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_btn_welcome"
            android:layout_marginTop="@dimen/mg_title_app"
            android:background="@drawable/border_button"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/height_btn_welcome"
                android:layout_height="@dimen/height_btn_welcome"
                android:src="@drawable/region_icon_region_default" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_btn_welcome"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="@dimen/img_next"
            android:layout_height="@dimen/img_next"
            android:alpha="0.5"
            android:background="@drawable/next_page" />

    </LinearLayout>
</LinearLayout>